can show yohko picture with transparency
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,9 +5,15 @@
     android:layout_height="fill_parent"
     >
 <TextView
+    android:id="@+id/tv"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="Hello World, Nanidroid"
+    />
+<ImageView
+    android:id="@+id/sakura_display"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     />
 </LinearLayout>
 
