--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,6 +14,7 @@
     android:id="@+id/sakura_display"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="ivClick"
     />
 </LinearLayout>
 
