--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,7 +6,7 @@
     >
   <LinearLayout
     android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
     <Button
@@ -43,8 +43,8 @@
     />
 <ImageView
     android:id="@+id/sakura_display"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:onClick="ivClick"
     />
 </LinearLayout>
