update layout to show both sakura and kero
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,7 +13,7 @@
       android:id="@+id/btn1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="next surface"
+      android:text="next s."
       android:onClick="onNextSurface"
       />
 
@@ -29,30 +29,67 @@
       android:id="@+id/btn3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="show collision box"
+      android:text="c.box"
       android:onClick="onShowCollision"
       />
-    
 
+    <Button
+      android:id="@+id/btn4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="run"
+      android:onClick="runClick"
+      />
+    
   </LinearLayout>
-<TextView
-    android:id="@+id/tv"
+
+  <LinearLayout
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    >
+<com.cattailsw.nanidroid.Balloon
+    android:id="@+id/bKero"
+    android:layout_width="0dp"
+      android:layout_weight="1"
     android:layout_height="wrap_content"
     android:text="Hello World, Nanidroid"
     android:background="@drawable/balloon"
     />
+<com.cattailsw.nanidroid.Balloon
+    android:id="@+id/bSakura"
+    android:layout_width="0dp"
+      android:layout_weight="1"
+    android:layout_height="wrap_content"
+    android:text="Hello World, Nanidroid"
+    android:background="@drawable/balloon"
+    />
+  </LinearLayout>
+  <LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
 <!--<ImageView
     android:id="@+id/sakura_display"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:onClick="ivClick"
     />-->
-  <com.cattailsw.nanidroid.SakuraView
-    android:id="@+id/sakura_display"
-    android:layout_width="fill_parent"
+  <com.cattailsw.nanidroid.KeroView
+    android:id="@+id/kero_display"
+    android:layout_width="0dp"
+      android:layout_weight="1"
     android:layout_height="fill_parent"
     android:onClick="ivClick"
     />
+  <com.cattailsw.nanidroid.SakuraView
+    android:id="@+id/sakura_display"
+    android:layout_width="0dp"
+      android:layout_weight="1"
+    android:layout_height="fill_parent"
+    android:onClick="ivClick"
+    />
+  </LinearLayout>
 </LinearLayout>
 
