--- a/res/layout/main_btns.xml
+++ b/res/layout/main_btns.xml
@@ -3,30 +3,34 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:baselineAligned="false" >
-
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:onClick="onListGhost"
         android:text="@string/list_ghost_btn_text" />
-
+
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onUpdate"
         android:text="@string/update_btn_text" />
-
+
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onMoreGhost"
         android:text="@string/more_ghosts_btn_text" />
-
+
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onHelp"
         android:text="@string/help_btn_text" />
 
 </LinearLayout>
