--- a/res/layout/dbg_btns.xml
+++ b/res/layout/dbg_btns.xml
@@ -33,7 +33,7 @@
         android:text="run" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="narTest"
