--- a/res/layout/main_btns.xml
+++ b/res/layout/main_btns.xml
@@ -27,7 +27,7 @@
         android:text="@string/more_ghosts_btn_text" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onHelp"
