--- a/res/layout/main_btns.xml
+++ b/res/layout/main_btns.xml
@@ -18,13 +18,13 @@
         android:layout_height="wrap_content"
         android:onClick="onUpdate"
         android:text="@string/update_btn_text" />
-
+
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button3"        
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onMoreGhost"
-        android:text="@string/more_ghosts_btn_text" />
+        android:onClick="onSetupClick"
+        android:text="@string/setup_btn_text" />
 
     <Button
         android:id="@+id/btn_help"
