define listview item for ghost list for some unknown reason the item text was always white before this fix
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="NanidroidTheme" parent="@android:style/Theme.NoTitleBar"></style>
+    <style name="NanidroidTheme" parent="@android:style/Theme.NoTitleBar">
+        <item name="android:listViewStyle">@style/MyListViewStyle</item>
+    </style>
+    <style name="MyListViewStyle" parent="@android:style/Widget.ListView.White">
+        <item name="android:listSelector">@null</item>
+        <item name="android:overScrollFooter">@null</item>
+    </style>
     
 </resources>
