--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,6 +12,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/fl"
+    android:onClick="frameClick"
     >
 <com.cattailsw.nanidroid.Balloon
     android:id="@+id/bKero"
