--- a/res/layout/dbg_btns.xml
+++ b/res/layout/dbg_btns.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onNextGhost"
-        android:text="next G" />
+        android:text="dump S" />
 
     <Button
         android:id="@+id/btn4"
