code for user input dlg and shiori event
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item type="id" name="fl" />
     <item type="id" name="adview" />
+  <item type="id" name="ok_btn" />
+  <item type="id" name="cancel_btn" />
 </resources>
