--- a/res/layout/dlg_url_input.xml
+++ b/res/layout/dlg_url_input.xml
@@ -4,6 +4,7 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_gravity="center"
+  android:minWidth="@dimen/url_dlg_min_width"
   >
   <TextView android:id="@+id/errmsg_disp"
     android:layout_width="wrap_content"
