--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,13 +9,7 @@
 
   <include layout="@layout/main_btns"  android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/dbg_btn_bar" android:id="@+id/btn_bar" android:visibility="gone"/>
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-  
+  <include android:id="@id/progress" layout="@layout/progress_wait" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />"
   
 <FrameLayout
     android:layout_width="fill_parent"
