--- a/res/layout/dbg_btns.xml
+++ b/res/layout/dbg_btns.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onAnimate"
-        android:text="animate" />
+        android:text="draw CBox" />
 
     <Button
         android:id="@+id/btn3"
